<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">多么生活</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="prb_default_symbolic_string">$</string>
    <string name="sample_group_suite">功能套件</string>
    <string name="sample_group_comp">常用组件</string>
    <string name="sample_group_examples">组件用法示例</string>
    <string name="sample_group_extend">自定义界面示例</string>
    <string name="sample_group_define">API 使用示例</string>
    <string name="sample_CameraComponent">相机组件</string>
    <string name="progressActivityErrorButton">重新加载</string>
    <string name="progressActivityEmptyTitlePlaceholder">未加载到任何内容!</string>
    <string name="progressActivityEmptyContentPlaceholder">We couldn\'t find anything. Tap the button to take your first image</string>
    <string name="progressActivityErrorContentPlaceholder">网络不给力哦，加载失败</string>
    <string name="find_release_topic">参与话题</string>
    <string name="userDataNull">暂无此用户</string>
    <string name="unConnectedNetwork">暂无网络,请检查是否联网</string>
    <string name="connectedFaile">请求失败，无效商品</string>
    <string name="shopOverdue">请求失败，商品已过期</string>
    <string name="invalidData">请求失败，无效数据</string>
    <string name="saveSuccess">保存成功</string>
    <string name="MobileError">手机号码有误，请重新输入</string>
    <string name="SmsCodeNull">验证码为空，请输入验证码</string>
    <string name="PasswordDiffer">两次密码输入不一致</string>
    <string name="PasswordSame">新密码与旧密码一致!</string>
    <string name="PasswordLessSix">密码小于6位，请重新输入</string>
    <string name="PasswordInconformity">密码必须是6-20个英文和数字组合组成</string>
    <string name="PasswordRule">密码为6-20个英文和数字组合组成</string>
    <string name="GetSmsCodeSuccess">获取验证码成功</string>
    <string name="personal_name_hint">昵称由2-10个字组成</string>
    <string name="personal_name_more_hint">字数超过限定</string>
    <string name="text_fonts_empty">请输入字符</string>
    <string name="buy_go_it">立即购买</string>
    <string name="buy_go_null">已抢光</string>
    <string name="buy_go_wait">待售</string>
    <string name="send_sms">发送验证码</string>
    <string name="wait_msg">请稍后(%1$d)秒</string>
    <string name="sug_max_text_length">450</string>
    <string name="sug_hint_text">请写下您对Domolife的感受及需要解决的问题，我们将及时为您解决，努力提供更优质的服务</string>
    <string name="add_img">添加图片</string>
    <string name="do_failed">操作失败，请重试</string>
    <string name="date_exception_hint">数据异常，请截图联系客服！</string>
    <string name="shop_goods_overdue">该商品已失效</string>
    <string name="direct_eva_hint">你的支持是我们的动力，你的宝贵意见是我们改进的方向，感谢你支持多么生活！</string>
    <string name="invoice_title">请输入发票抬头</string>
    <string name="unavailable_ticket">暂无适用优惠券</string>
    <string name="comment_send_failed">发送失败，请重新发送</string>
    <string name="comment_type_lack">评论类型缺失，评论失败</string>
    <string name="comment_send_success">发送完成</string>
    <string name="quality_search_hint">输入商品关键字</string>
    <string name="Get_Coupon_Fail">优惠券领取失败</string>
    <string name="coupon_start_fee">满%1$d可使用</string>
    <string name="coupon_period_date">有效期:%1$s~%2$s</string>
    <string name="coupon_tb_price">¥%1$s元优惠券</string>
    <string name="AddCarSuccess">成功加入购物车~</string>
    <string name="integral_hint">积分可以兑换礼品，晒单可获得更多积分</string>
    <string name="collect_failed">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_done">已取消%1$s%2$s</string>
    <string name="search_leave_mes">给Domo留言</string>
    <string name="leave_mes_hint">你可以告诉我们想团什么宝贝？也可以留下你的问题和建议</string>
    <string name="no_data">暂无数据</string>
    <string name="doSuccess">%1$s成功</string>
    <string name="find_relev_invita_tint">添加关联会让更多人看到你的帖子</string>
    <string name="relevance_pro_more">最多可关联5件商品</string>
    <string name="sel_rel_pro">请选择关联商品</string>
    <string name="no_found_content">没有找到相关%1$s</string>
    <string name="web_uid_method">javascript:getUserId(%1$d)</string>
    <string name="web_head_method">javascript:getHeader(%1$s,%2$s)</string>
    <string name="web_comment_success_method">javascript:commentSuccess(\'%1$s\',\'%2$s\')</string>
    <string name="web_image_up_method">javascript:upBackImage(\'%1$s\',\'%2$s\')</string>
    <string name="web_add_reminder">javascript:addReminderCallback(\'%1$s\',\'%2$d\')</string>
    <string name="web_notification_status">javascript:getNotificationStatus(\'%1$d\')</string>
    <string name="web_share_getData_method">javascript:shareBtnGo()</string>
    <string name="Submit_Success">提交成功，我们会尽快处理</string>
    <string name="Submit_Failed">提交失败，请填写正确内容再提交</string>
    <string name="no_install_app_store">未安装应用市场</string>
    <string name="birthday_set">生日已配置不可更改</string>
    <string name="set_sex">请设置性别</string>
    <string name="load_img_failed">图片地址错误</string>
    <string name="sel_habit_tag">至少选择一项</string>
    <string name="img_url_error">图片地址错误</string>
    <string name="sel_no_not">请选择%1$s</string>
    <string name="mine_baby_show">偷偷告诉我们你当前的状态\n我们将给您和宝宝推荐全球更好的商品</string>
    <string name="list_date_due">清单已过期</string>
    <string name="ql_new_gp_tint">该团仅限新用户参团，非新用户直接开团并分享好友 </string>
    <string name="ql_normal_gp_tint">有小伙伴正在发起拼团，您可以直接参与 </string>
    <string name="join_group">去参团</string>
    <string name="join_new_group">新人团</string>
    <string name="sel_pro_sku">请选择 %1$s</string>
    <string name="not_attention_self">亲亲，这个是你呦</string>
    <string name="skip_topic">进入%1$s专区</string>
    <string name="look_indent">查看订单</string>
    <string name="skip_quality">返回首页</string>
    <string name="hot_text">热门</string>
    <string name="hot_topic">热门话题</string>
    <string name="text_more">查看更多</string>
    <string name="catergory">分类</string>
    <string name="get_integral">参与得积分</string>
    <string name="topic_format">#%1$s#</string>
    <string name="commit_failed">提交失败，请重新提交</string>
    <string name="text_oversea_hint">温馨提示：为保障顺利过关，收货地址使用的收货人姓名，身份证号码与付款人真实信息保持一致</string>
    <string name="input_name">请输入用户姓名</string>
    <string name="input_card">请输入身份证号码</string>
    <string name="copy_url_success">复制链接成功</string>
    <string name="umeng_share_c_url">复制链接</string>
    <string name="refrence_only">该金额仅供参考，具体金额以实际结算为准</string>
    <string name="text_act_not_start">¥%1$s（未开始）</string>
    <string name="car_discount_price">优惠了¥%1$s元</string>
    <string name="money_price_chn">¥%1$s</string>
    <string name="shop_cart_rmb_price">%1$s  ¥%2$s</string>
    <string name="money_market_price_chn">参考价¥%1$s</string>
    <string name="cart_present">【赠品】%1$s</string>
    <string name="cart_combine">【组合购】%1$s</string>
    <string name="comment_count">全部评论(%1$d)</string>
    <string name="comment_num">评论(%1$d)</string>
    <string name="combine_price">组合价 </string>
    <string name="sku_max_discount_price">最多可优惠%1$s元</string>
    <string name="sku_discount_price">优惠了%1$s元</string>
    <string name="price_count">共 %1$d 件   合计:¥%2$s</string>
    <string name="pay_amount">实付 ¥%1$s (%2$s)</string>
    <string name="appraise_integral">评价赢积分</string>
    <string name="write_score_comment">写点评</string>
    <string name="appraise_integral_score">评价赢%1$s积分</string>
    <string name="appraise_public_hint">带图评价商品超过10个字有机会获取积分哦！</string>
    <string name="appraise_public_success">评价完成,晒单可赢得更多积分！</string>
    <string name="pay_failed">你的订单在%1$d小时%2$d分内未支付将被\n取消，请尽快支付。</string>
    <string name="refund_time">\n如果在 %1$d天%2$d时%3$d分%4$d秒 未寄回，此次售后将自动关闭</string>
    <string name="refund_type_sel_errror">类型选择错误，请重新选择</string>
    <string name="refund_type">请选择退款类型</string>
    <string name="refund_reason">请选择退款原因</string>
    <string name="refund_address_sel">请选择售后收货地址</string>
    <string name="refund_repair_content">请描述售后问题</string>
    <string name="cancel_invite">您将撤销本次申请，如果问题未解决，您还可以再次发起</string>
    <string name="refund_type_error">服务类型异常,请重试</string>
    <string name="refund_pass_express_company">物流公司：%1$s</string>
    <string name="refund_pass_express_no">物流单号：%1$s</string>
    <string name="search_pro_empty">没有找到“ %1$s ”相关商品</string>
    <string name="look_more_good">查看更多好物 >></string>
    <string name="login_success">登录成功</string>
    <string name="personal_real_name">姓名（因海关需要，请填写收货人真实姓名）</string>
    <string name="personal_real_id_card">请填写收货人身份证号码</string>
    <string name="personal_nick_name">取个昵称会更受欢迎哦</string>
    <string name="personal_perfect">资料完善可获得积分</string>
    <string name="buy_get_integral_tint">%1$d积分</string>
    <string name="refund_repair_address">收货地址(该地址是多么生活回寄给您的地址)</string>
    <string name="variable_exception">参数异常，请重新刷新数据</string>
    <string name="refund_account_time_price">退回账号：%1$s\n到账时间：%2$s</string>
    <string name="app_version_tint">已是最新版本，暂无更多更新</string>
    <string name="product_detail_newline">商品\n详情</string>
    <string name="group_discount">拼团省\n%1$s</string>
    <string name="sku_notice">到货提醒</string>
    <string name="sku_cancel_notice">取消提醒</string>
    <string name="share_join_group">还差%d人，即可获得！</string>
    <string name="group_buy_count">已团%1$d件</string>
    <string name="group_residue_join_count">"拼团中，还差%1$d人</string>
    <string name="group_left_join_count">"还差%1$d人成团</string>
    <string name="comment_article_hint">给小编留言互动，入选送积分</string>
    <string name="comment_article_send_success">小编收到啦(*╹▽╹*)</string>
    <string name="comment_handpick_count">精选评论(%1$d)</string>
    <string name="comment_hint_invitation">你的走心评论是po主的最大动力</string>
    <string name="comment_hint_empty">你知道ta在等你评论吗</string>
    <string name="product_sell_out">此商品库存不足</string>
    <string name="product_small_count">已是最小数量了哦~</string>
    <string name="integral_score_marquee">获得%1$d积分</string>
    <string name="integral_lottery_number">数量：%1$d\n参与人数：%2$d</string>
    <string name="integral_lottery_code">我的夺宝码：%1$s</string>
    <string name="integral_lottery_award_count">x%1$d</string>
    <string name="integral_lottery_award_rule">备注：已中奖用户公布中奖名单后超过48小时未领取视为自动放弃，参考开奖规则。</string>
    <string name="address_not_null">请填写收货地址</string>
    <string name="integral_product_and_price">%1$d积分+%2$s元</string>
    <string name="integral_product_and_price2">%1$s积分+%2$s元</string>
    <string name="integral_product_add">%1$d积分+</string>
    <string name="integral_indent_product_price_and_money">%1$d积分+¥%2$s</string>
    <string name="integral_indent_product_price">%1$d积分</string>
    <string name="integral_indent_product_price2">%1$d积分</string>
    <string name="integral_indent_product_count">共%1$d件 实付:</string>
    <string name="product_comment_count">Ta们在说(%1$d)</string>
    <string name="buy_return_integral_total">返%1$d积分</string>
    <string name="invite_partner_register">你的好友 %1$s 邀请你注册多么生活</string>
    <string name="net_error">当前网络不好，请刷新重试</string>
    <string name="miss_parameters_hint">数据异常，请重试</string>
    <string name="request_json_data_error">数据错误，请重试</string>
    <string name="image_crop_style">/indexcrop,y_%1$d,i_%2$d</string>
    <string name="load_data_failed">可能原因\n·网络信号弱，换个wifi试一试~\n·系统出错，技术小哥正在抢修</string>
    <string name="time_product_clock_new">%1$s点上新</string>
    <string name="time_join_group_count">%1$s人喜欢</string>
    <string name="mine_follow_count">%1$s\n关注</string>
    <string name="mine_fans_count">%1$s\n粉丝</string>
    <string name="mine_invitation_count">%1$s\n帖子</string>
    <string name="communal_go_string"><![CDATA[%1$s >]]></string>
    <string name="skip_empty_page_hint">版本过低，请更新至最新版本。</string>
    <string name="inden_data_failed">订单类型异常，请稍后重试~</string>
    <string name="defaul">---</string>
    <string name="lottery_list">中奖名单</string>
    <string name="look_all_lottery_list"><![CDATA[查看全部中奖名单>>]]></string>
    <string name="lotter_baby_contact">请中奖的宝宝们尽快联系客服哦~</string>
    <string name="apply_invoice">去申请发票</string>
    <string name="save_invoice">保存发票</string>
    <string name="invoice_send_email">将发票pdf原件发送至邮箱</string>
    <string name="invoice_complete_time">（7个工作日内完成）</string>
    <string name="tax_point_desc">中国海关规定，不同类目的商品征收税率不同，该商品的进口税率为%s</string>
    <string name="tv_tax_explain">您所购买的商品已包含跨境电商进口税，个别商品税费由商家承担</string>
</resources>