<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_lottery_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sc_mm_6"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/sc_mm_230"
            android:layout_height="1px"
            android:background="@color/text_color_e_s"/>

        <TextView
            android:id="@+id/tv_lottery_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sc_mm_34"
            android:layout_marginRight="@dimen/sc_mm_34"
            android:gravity="center"
            android:text="@string/lottery_list"
            android:textColor="@color/text_normal_red"
            android:textSize="@dimen/sc_mm_30"/>

        <View
            android:layout_width="@dimen/sc_mm_230"
            android:layout_height="1px"
            android:background="@color/text_color_e_s"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_lottery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sc_mm_40"
        android:scrollbars="none"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flex_lottery_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/sc_mm_50"
        android:background="@color/white"
        android:paddingLeft="@dimen/sc_mm_20"
        android:paddingRight="@dimen/sc_mm_20"
        app:flexDirection="row"
        app:flexWrap="wrap"/>

    <TextView
        android:id="@+id/tv_all_lottery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sc_mm_18"
        android:text="@string/look_all_lottery_list"
        android:textColor="@color/text_normal_red"
        android:textSize="@dimen/sc_mm_28"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sc_mm_50"
        android:text="@string/lotter_baby_contact"
        android:textColor="@color/color_blue_reply_com"
        android:textSize="@dimen/sc_mm_24"/>
</LinearLayout>
